# bazel-mono-repo

./: .gitignore  WORKSPACE.bazel  bazel-bazel-mono-repo  bazel-bin  bazel-out  bazel-testlogs
projects/calculator/: BUILD.bazel  calculator.py  calculator_test.py
projects/my-python-app/: BUILD.bazel  main.py
projects/projectA/: BUILD.bazel
projects/projectB/: BUILD.bazel
